--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
   <title>The Weather App</title>
 </head>
 <body>
-  <div class="test"></div>
+  <header>
+    <h1>The Weather App</h1>
+    <form>
+      <input type="text">
+      <button class="button">Search</button>
+    </form>
+  </header>
+  <section>
+    <article class="card">
+
+    </article>
+  </section>
 </body> 
 </html>
