Style current weather card

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,21 @@
     </form>
   </header>
   <section>
-    <article class="card">
-
+    <article class="current">
+      <h2 class="current-header"> Jan 1st, 2022</h2>
+      <img src="#" class="current-weather">
+      <div class="current-temp">56°</div>
+      <div class="current-feel-label">Feels like </div>
+      <div class="current-feel-temp">52°</div>
+      <div class="current-high-label">High</div>
+      <div class="current-low-label">Low</div>
+      <div class="current-high-temp">62°</div>
+      <div class="current-low-temp">43°</div>
+      <div class="current-sunrise-label">Sunrise</div>
+      <div class="current-sunset-label">Sunset</div>
+      <div class="current-sunrise-time">8:00am</div>
+      <div class="current-sunset-time">9:00pm</div>
+      <div class="current-visibility">Visibility: 90%</div>
     </article>
   </section>
 </body> 
