Get data from Open Weather API

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,14 @@
   <header>
     <h1>The Weather App</h1>
     <form>
-      <input type="text">
+      <input type="text" name="location">
       <button class="button">Search</button>
     </form>
   </header>
   <section>
     <article class="current">
-      <h2 class="current-header"> Jan 1st, 2022</h2>
+      <h2 class="current-location">London, UK</h2>
+      <h2 class="current-date"> Jan 1st, 2022</h2>
       <img src="#" class="current-weather">
       <div class="current-temp">56°</div>
       <div class="current-feel-label">Feels like </div>
